fixes of embeds spacing on example page

--- a/source/css/home-responsive.css
+++ b/source/css/home-responsive.css
@@ -1454,7 +1454,7 @@
     }
     .section-6-left {
         padding-left: 0;
-        margin-top: 40px
+        /*margin-top: 40px*/
     }
     .section-6-left h4 {
         width: 100%
